app/subapps/khplayer/static/base.css
BODY {
	/* Default color scene, override in themes */

	--bg: white;
	--fg: black;

	--bg-header: #efefef;
	--bg-tabs: #b0b0b0;
	--bg-tab: #d0d0d0;
	--bg-tab-current: #efefef;

	--bg-progress-bar: #f8f8f8;
	--fg-progress-bar: green;

	--bg-buttons: #f0f0f0;
	--fg-buttons: black;
	--bg-input-text: white;
	--fg-input-text: black;

	--bg-flash: #C00000;
	--fg-flash: white;

	--bg-popup: #f8f8f8;

	--bg-dnd: #f0f0ff;
	--border-dnd: blue 2px solid;

	--bg-scenes: #ffffffc0;
	--fg-scenes: black;
	--bg-scenes-preview: #ffff00c0;
	--fg-scenes-preview: black;
	--bg-scenes-program: #0080ffc0;
	--fg-scenes-program: white;

	display: flex;
	flex-direction: column;
	}

HTML, BODY, HEADER, MAIN, SECTION, H1, H2, P, PRE, UL, LI, INPUT, SELECT, TEXTAREA, BUTTON, IMG {
	margin: 0;
	padding: 0;
	}
* {
	box-sizing: border-box;
	}

HTML {
	font-family: sans-serif;
	font-size: 12pt;
	}
BODY {
	color: var(--fg);
	background-color: var(--bg);
}
HTML, BODY {
	height: 100%;
	}
HEADER {
	background-color: var(--bg-header);
	border-bottom: 1px solid #a0a0a0;
	}
MAIN {
	flex-grow: 1;
	overflow: auto;
	}
SECTION {
	margin: 0.3rem;
	}
H1, H2 {
	font-family: sans-serif;
	}
H1 {
	font-size: 120%;
	}
H2 {
	font-size: 100%;
	}
P {
	margin-bottom: .5em;
	}
UL {
	margin: 0 0 0 1.2em;
	}
LI {
	margin: .2em 0;
	}

INPUT, SELECT, TEXTAREA, BUTTON {
	font-size: inherit;								/* For some reason Pywebview makes these large */
	}
INPUT[type=checkbox] {
	width: 1.2em;
	height: 1.2em;
	}
INPUT[type=text], TEXTAREA {
	background-color: var(--bg-input-text);
	color: var(--fg-input-text);
	}
.borderless-box INPUT[type=checkbox] {				/* FIXME: Hack for bad alignment in Scenes tab toolbar */
	vertical-align: bottom;
	margin-bottom: .78em;
	}
LABEL {
	font-weight: bold;
	}
INPUT, TEXTAREA {
	padding: .1em .2em;
	}
BUTTON, SELECT, OPTION, INPUT[type='text'] {
	padding: .5em;
	border-width: 1px;
	border-style: outset;
	border-color: #808080;
	border-radius: 3px;
	}
SELECT, BUTTON {
	background-color: var(--bg-buttons);
	color: var(--fg-buttons);
	white-space: nowrap;
	border-width: 1px;
	border-style: outset;
	border-color: #808080;
	}
SELECT:hover, BUTTON:hover {
	filter: brightness(110%);
	}
BUTTON:active {
	filter: brightness(50%);
	}

/* Button icons */
BUTTON[class] {
	position: relative;
	padding-left: 1.5em;
	}
BUTTON[class]::before {
	position: absolute; top: 0; left: 0;
	width: 100%; height: 100%;
	background-repeat: no-repeat;
	background-size: 1em 1em;
	background-position: .25em center;
	content: "";
	}
BUTTON.back::before {
	background-image: url(icon-back.svg);
	}
BUTTON.browse::before {
	background-image: url(icon-browse.svg);
	}
BUTTON.cancel::before {
	background-image: url(icon-cancel.svg);
	}
BUTTON.config::before {
	background-image: url(icon-config.svg);
	}
BUTTON.connect::before {
	background-image: url(icon-connect.svg);
	}
BUTTON.delete::before {
	background-image: url(icon-cancel.svg);
	}
BUTTON.down::before {
	background-image: url(icon-down.svg);
	}
BUTTON.download::before {
	background-image: url(icon-download.svg);
	}
BUTTON.face::before {
	background-image: url(icon-face.svg);
	}
BUTTON.new::before {
	background-image: url(icon-new.svg);
	}
BUTTON.reload::before {
	background-image: url(icon-reload.svg);
	}
BUTTON.reset::before {
	background-image: url(icon-reset.svg);
	}
BUTTON.save::before {
	background-image: url(icon-save.svg);
	}
BUTTON.search::before {
	background-image: url(icon-search.svg);
	}
BUTTON.up::before {
	background-image: url(icon-up.svg);
	}
BUTTON.upload::before {
	background-image: url(icon-upload.svg);
	}
BUTTON.web::before {
	background-image: url(icon-web.svg);
	}

/* Fancy file upload */
.file-upload {
	display: flex;
	flex-grow: 1;
	}
.file-upload INPUT[type='file'] {
	display: none;
	}

/* Header at top of each tabbed page */
HEADER > NAV > UL {
	display: flex;
	list-style-type: none;
	margin: 0;
	background-color: var(--bg-tabs);
	padding-top: 1px;
	}
HEADER > NAV > UL > LI {
	margin: 0 5px;
	border-radius: 5px 5px 0 0;
	white-space: nowrap;
	background-color: var(--bg-tab);
	}
HEADER > NAV > UL > LI:hover {
	}
HEADER > NAV > UL > LI.current {
	position: relative;
	top: 1px;
	background-color: var(--bg-tab-current);
	}
HEADER > NAV > UL > LI > A {
	padding: .5em;
	display: block;
	text-decoration: none;
	color: inherit;
	}
HEADER > H1 {
	padding: .3em;
	}
HEADER H1 A {
	color: inherit;
	text-decoration: inherit;
	}
HEADER {
	position: relative;
	}
HEADER DIV#progress {
	position: absolute;
	top: 2.5em;
	right: .5em;
	width: 75%;
	max-width: 60em;
	background-color: var(--bg-header);
	z-index: 100;
	border: 1px solid #808080;
	visibility: hidden;
	}
HEADER DIV#progress:has(#progress-message > DIV) {
	visibility: visible;
	}
HEADER DIV#progress > * {
	margin: .3em;
	border: 1px solid #c0c0c0;
	}
HEADER DIV#progress-bar {
	background-color: var(--bg-progress-bar);
	height: 1.4em;
	}
HEADER DIV#progress-bar > DIV {
	height: 100%;
	background-color: green;
	background-color: var(--fg-progress-bar);
	}
HEADER DIV#progress-message {
	min-height: 1.4em;
	padding: .1em .2em 0 .2em;
	}
HEADER DIV#progress-message DIV {
	text-indent: -1em;
	padding-left: 1em;
	}
HEADER DIV#progress-message DIV.heading {
	font-weight: bold;
	}
HEADER DIV#progress-message DIV.success {
	color: green;
	}
HEADER DIV#progress-message DIV.error {
	color: red;
	}
HEADER FORM.header-reload {
	float: right;
	margin: .2em;
	}

/* Error messages above content */
DIV.flash {
	background-color: var(--bg-flash);
	color: var(--fg-flash);
	border-radius: 5px;
	margin: .3rem .3rem 0 .3rem;
	padding: .5em;
	font-family: sans-serif;
	}

/* An actual content table with borders and shaded header elements */
TABLE.borders {
	border-collapse: collapse;
	margin-bottom: .3em;
	}
TABLE.borders TH, TABLE.borders TD {
	border: thin solid #808080;
	text-align: left;
	padding: .3em;
	}
TABLE.borders.selection TH:first-child, TABLE.borders.selection TD:first-child {
	width: 1px;
	}
TABLE.borders TH {
	}
TABLE.borders TD {
	}
TABLE.borders.full-width {
	width: 100%;
	}
TABLE.borders.medium-width {
	width: 40em;
	}
TABLE.borders BUTTON.add {
	width: 1.5em;
	height: 1.5em;
	margin: 0;
	padding: 0;
	font-weight: bold;
	font-size: 150%;
	}
TABLE.borders BUTTON.fill {
	width: 100%;
	}

/* Thumbnail image representing video or illustration */
DIV.thumbnail {
	position: relative;
	display: flex;
	flex-direction: column;
	justify-content: center;
	border: 1px solid #f0f0f0;
	width: 98px;			/* 16:9 x 6 = 96x54, plus border */
	height: 56px;
	}
DIV.thumbnail.large {
	width: 194px;			/* 16:9 x 12 = 192x108, plus border */
	height: 110px;
	}
DIV.thumbnail > IMG {
	width: 100%;
	height: 100%;
	object-fit: contain;
	}
DIV.thumbnail > DIV.caption {
	position: absolute;
	left: 0;
	top: 0;
	font-size: 70%;
	padding: 0 .2em;
	background-color: rgba(255, 255, 255, 0.5);
	}

/*
   To suppress the space between inline elements or a bordered-box or
   borderless box(such as between consecutive buttons) we set the font
   size to zero and restore it within the elements. While the font size
   is zeroed out we have to use "rem" instead of "em" for sizes. We tried
   flexbox, but if you enable it, you lose the disction between block and
   inline elements.
*/

/* Box to contain a group of controls, with border */
.bordered-box {
	font-size: 0;
	border: thin solid #808080;
	border-radius: .2rem;
	padding: .25rem 0 0 .25rem;
	}
.bordered-box > * {
	font-size: 1rem;
	margin: 0 .25em .25em 0;
	}
.bordered-box > A {				/* without this a <a><button></button></a> has no margin */
	display: inline-block;
	}

/* Box to contain a group of controls, without border */
.borderless-box {
	font-size: 0;
	margin: 0;
	}
.borderless-box > * {
	font-size: 1rem;
	margin: 0 .25em .25em 0;
	}
.borderless-box:last-child {
	margin-bottom: 0;
	}

/* Popup made from bordered box */
MAIN {
	position: relative;
	}
.popup-screen {
	position: absolute;
	top: 0; bottom: 0; left: 0; right: 0;
	background-color: rgba(220, 220, 220, 0.75);
	}
.bordered-box.popup {
	position: absolute;
	left: 2vw;
	top: 5vw;
	width: 95vw;
	background-color: var(--bg-popup);
	border: thin solid #404040;
	border-width: 2px;
	box-shadow: 0 0 0.5rem 0.25rem gray;
	}

/* Labeled form field */
.form-field {
	display: inline-flex;
	align-items: center;
	margin: 0 .25em .25em 0;
	flex-grow: 1;
	max-width: calc(100% - .5em);
	}
.form-field > * {
	margin: 0 .3em 0 0;
	}
.form-field > *:last-child {
	margin-right: 0;
	}
.form-field > LABEL:first-child::after {
	content: ":";
	}
.form-field > *:last-child {
	flex-grow: 1;
	}
.form-field > INPUT[type='text'].long-url {
	width: 60em;
	}
.form-field > TEXTAREA.urls {
	width: 40em;
	height: 5em;
	}

/* For drag-and-drop */
.highlight {
	border: blue 2px solid;
	border: var(--border-dnd);
	background-color: var(--bg-dnd);
	}

/* Scenes Tab */
#scenes-tab-layout {				/* scene list, bottom toolbar */
	display: flex;
	flex-direction: column;
	height: 100%;
	}
#scenes-scroller {					/* scrolling container for scene list table */
	flex-grow: 1;
	overflow-y: scroll;
	}
#scenes {							/* scenes list table */
	width: 100%;
	border-collapse: collapse;
	margin-bottom: .1em;			/* little clue we have scrolled to the bottom */
	}
#scenes TD {
	border: thin solid #808080;
	text-align: left;
	padding: .3em;
	}
#scenes TR {
	background-color: var(--bg-scenes);
	color: var(--fg-scenes);
	}
#scenes TR:hover {
	backdrop-filter: brightness(80%);
	}
#scenes TR.active {
	backdrop-filter: brightness(40%);
	}
#scenes TR.preview-scene {
	background-color: var(--bg-scenes-preview);
	color: var(--fg-scenes-preview);
	}
#scenes TR.program-scene {
	background-color: var(--bg-scenes-program);
	color: var(--fg-scenes-program);
	}
#scenes TD:nth-child(2) {			/* thumbnail image */
	width: 1px;
	}
#scenes TR:first-child TD {			/* remove top border of first row */
	border-top: none;
	}
#scenes TD:first-child {			/* remove dup border from far left cell */
	border-left: none;
	width: 1px;						/* checkbox column, don't expand */
	}
#scenes TD:last-child {
	border-right: none;
	}
#scenes-controls {					/* bottom toolbar */
	border-top: thin solid grey;
	margin: 0;
	padding: .3rem .3rem 0 .3rem;
	background-color: var(--bg-header);
	}
.scene-add-form {					/* hidden forms for drag-n-drop */
	display: none;
	}

/* Search box */
.hbox {
	display: flex;
	align-items: flex-start;
	}
.hbox > INPUT[type='text'], .hbox > INPUT[type='file'] {
	flex-grow: 1;
	}
.hbox > * {
	margin-right: .3em;
	}
.hbox > *:last-child {
	margin-right: 0;
	}

.filemanager {
	border: thin inset grey;
	padding: .5em;
	min-height: 20em;
	}
.filemanager.short {
	min-height: auto;
	}
.filemanager .item {				/* a file or folder */
	display: inline-block;
	position: relative;
	vertical-align: top;
	padding: .5em;
	}
.filemanager .item:hover {
	backdrop-filter: brightness(80%);
	}
.filemanager .folder-preview {
	position: absolute;
	width: 75%;
	max-height: 75%;
	top: 17%;	/* was 4% before we set max-height */
	left: 12.5%;
	}
.filemanager .folder-name {
	width: 184px;
	text-align: center;
	}
.filemanager .bottom-bar {
	display: flex;
	}
.filemanager .bottom-bar INPUT[type='checkbox'] {
	margin: .2em;
	}
.filemanager .bottom-bar .filename {
	margin: .2em 0;
	padding: .2em;
	width: 10em;
	flex-grow: 1;
	font-size: 80%;
	}
.filemanager .bottom-bar INPUT[type='text']:focus {
	width: 25em;
	}

/* Used in scene composer */
.slider {
	display: flex;
	margin: 0 0 .5em 0;
	}
.slider INPUT {
	flex-grow: 1;
	}
.slider SPAN {
	width: 3em;
	}
.slider LABEL {
	width: 5em;
	}

.bounds BUTTON {
	padding: 5px;
	}
.bounds BUTTON svg {
	display: block;
	width: 64px;
	height: 36px;
	pointer-events: none;
	}
.bounds BUTTON svg rect {
	stroke: black;
	stroke-width: 10;
	}
.bounds BUTTON svg rect.screen {
	fill: #e0e0e0;
	}
.bounds BUTTON svg rect.bounds {
	fill: #8080c0;
	}

